NUT-1078: Added optional drop shadows on popover.

--- a/infl-styles/_popover.scss
+++ b/infl-styles/_popover.scss
@@ -1,7 +1,9 @@
 /* COPIED FROM '../src' DO NOT EDIT */
+$popover-z-index: 100000005;
+
 .tether-element{
   // Make sure this is always above or equal to guider z-index.
-  z-index: 100000005;
+  z-index: $popover-z-index;
 }
 
 .pt-popover-arrow-container {
@@ -9,6 +11,7 @@
   font-size: 0px;
   line-height: normal;
   width: auto;
+  z-index: $popover-z-index + 1;
 
   .pt-popover-arrow {
     position:      relative;
