--- a/src/popover/_popover.scss
+++ b/src/popover/_popover.scss
@@ -5,6 +5,15 @@ $popover-z-index: 100000005;
   z-index: $popover-z-index;
 }
 
+.pt-popover-backdrop {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 100000004;
+}
+
 .pt-popover-arrow-container {
   position:   absolute;
   font-size: 0px;
