NUT-1084: Adjusted checkbox icons.

--- a/infl-styles/_checkbox.scss
+++ b/infl-styles/_checkbox.scss
@@ -38,6 +38,7 @@
         position: absolute;
         font-size: 18px;
         top: -3px;
+        left: -2.5px;
       }
     }
   }
@@ -50,6 +51,7 @@
         position: absolute;
         font-size: 18px;
         top: -3px;
+        left: -2.5px;
       }
     }
   }
