--- a/infl-styles/_popover.scss
+++ b/infl-styles/_popover.scss
@@ -1,4 +1,3 @@
-/* COPIED FROM '../src' DO NOT EDIT */
 $popover-z-index: 100000005;
 
 .tether-element{
@@ -21,152 +20,81 @@ $popover-z-index: 100000005;
   line-height: normal;
   width: auto;
   z-index: $popover-z-index + 1;
-
-  .pt-popover-arrow {
-    position:      relative;
-    display:       inline-block;
-    width:         0px;
-    height:        0px;
-
-    &.inner {
-      position:   absolute;
-      z-index:    100;
-    }
-  }
-
-  &.top {
-    top: -10px;
-    left: calc(50% - 10px);
-
-    .pt-popover-arrow {
-      border-top:    10px solid #ccc;
-      border-bottom: 0px;
-      border-left:   10px solid transparent;
-      border-right:  10px solid transparent;
-
-      &.inner {
-        border-top: 10px solid white;
-        bottom:     1px;
-        right:      -10px;
-
-        &.no-border {
-          bottom: 0px;
-        }
-      }
-    }
-  }
-
-  &.bottom {
-    left: calc(50% - 10px);
-    bottom: -10px;
-
-    .pt-popover-arrow {
-      border-bottom: 10px solid #ccc;
-      border-top:    0px;
-      border-left:   10px solid transparent;
-      border-right:  10px solid transparent;
-
-      &.inner {
-        border-bottom: 10px solid white;
-        bottom:        auto;
-        top:           1px;
-        right:      -10px;
-
-        &.no-border {
-          top: 0px;
-        }
-      }
-    }
-  }
-
-  &.left {
-    left: -10px;
-    top: calc(50% - 10px);
-
-    .pt-popover-arrow {
-      border-left: 10px solid #ccc;
-      border-right: 0px;
-      border-top: 10px solid transparent;
-      border-bottom: 10px solid transparent;
-      position: absolute;
-
-      &.inner {
-        border-left: 10px solid white;
-        left: auto;
-        right: 1px;
-        top: -10px;
-
-        &.no-border {
-          right: 0px;
-        }
-      }
-    }
-  }
-
-  &.right {
-    top: calc(50% - 10px);
-    right: 0px;
-
-    .pt-popover-arrow {
-      border-right: 10px solid #ccc;
-      border-left: 0px;
-      border-top: 10px solid transparent;
-      border-bottom: 10px solid transparent;
-      position: absolute;
-
-      &.inner {
-        border-right: 10px solid white;
-        right: auto;
-        left: 1px;
-        top: -10px;
-
-        &.no-border {
-          left: 0px;
-        }
-      }
-    }
-  }
 }
 
-.pt-popover { //replace namespacing with css modules
+.pt-popover-arrow-container .pt-popover-arrow {position:      relative;display:       inline-block;width:         0px;height:        0px;
+}
 
-  .pt-popover-content {
-    box-sizing: border-box;
-    color:        #000;
-    font-size:    13px;
-    //display:      block;
-    border-style: solid;
-    border-width: 1px;
-    border-color: transparent;
-    //position: relative;
+.pt-popover-arrow-container .pt-popover-arrow.inner {position:   absolute;z-index:    100;
+}
 
-    & > * {
-      box-sizing: border-box;
-      max-width: 100%;
-    }
-  }
+.pt-popover-arrow-container.top {top: -10px;left: calc(50% - 10px);
+}
 
-  &.top {
-    .pt-popover-content {
-      margin-bottom: 10px;
-    }
-  }
+.pt-popover-arrow-container.top .pt-popover-arrow {border-top:    10px solid #ccc;border-bottom: 0px;border-left:   10px solid transparent;border-right:  10px solid transparent;
+}
 
-  &.bottom {
-    .pt-popover-content {
-      margin-top: 10px;
-    }
-  }
+.pt-popover-arrow-container.top .pt-popover-arrow.inner {border-top: 10px solid white;bottom:     1px;right:      -10px;
+}
 
-  &.left {
-    .pt-popover-content {
-      margin-right: 10px;
-    }
-  }
+.pt-popover-arrow-container.top .pt-popover-arrow.inner.no-border {bottom: 0px;
+}
 
-  &.right {
-    .pt-popover-content {
-      margin-left: 10px;
-    }
-  }
+.pt-popover-arrow-container.bottom {left: calc(50% - 10px);bottom: -10px;
+}
+
+.pt-popover-arrow-container.bottom .pt-popover-arrow {border-bottom: 10px solid #ccc;border-top:    0px;border-left:   10px solid transparent;border-right:  10px solid transparent;
+}
+
+.pt-popover-arrow-container.bottom .pt-popover-arrow.inner {border-bottom: 10px solid white;bottom:        auto;top:           1px;right:      -10px;
+}
+
+.pt-popover-arrow-container.bottom .pt-popover-arrow.inner.no-border {top: 0px;
+}
+
+.pt-popover-arrow-container.left {left: -10px;top: calc(50% - 10px);
+}
+
+.pt-popover-arrow-container.left .pt-popover-arrow {border-left: 10px solid #ccc;border-right: 0px;border-top: 10px solid transparent;border-bottom: 10px solid transparent;position: absolute;
+}
+
+.pt-popover-arrow-container.left .pt-popover-arrow.inner {border-left: 10px solid white;left: auto;right: 1px;top: -10px;
+}
+
+.pt-popover-arrow-container.left .pt-popover-arrow.inner.no-border {right: 0px;
+}
+
+.pt-popover-arrow-container.right {top: calc(50% - 10px);right: 0px;
+}
+
+.pt-popover-arrow-container.right .pt-popover-arrow {border-right: 10px solid #ccc;border-left: 0px;border-top: 10px solid transparent;border-bottom: 10px solid transparent;position: absolute;
+}
+
+.pt-popover-arrow-container.right .pt-popover-arrow.inner {border-right: 10px solid white;right: auto;left: 1px;top: -10px;
+}
+
+.pt-popover-arrow-container.right .pt-popover-arrow.inner.no-border {left: 0px;
+}
+
+//replace namespacing with css modules
+
+.pt-popover .pt-popover-content {box-sizing: border-box;color:        #000;font-size:    13px;
+  //display:      block;border-style: solid;border-width: 1px;border-color: transparent;
+}
+
+//position: relative;
+
+.pt-popover .pt-popover-content > * {box-sizing: border-box;max-width: 100%;
+}
+
+.pt-popover.top .pt-popover-content {margin-bottom: 10px;
+}
+
+.pt-popover.bottom .pt-popover-content {margin-top: 10px;
+}
+
+.pt-popover.left .pt-popover-content {margin-right: 10px;
+}
+
+.pt-popover.right .pt-popover-content {margin-left: 10px;
 }
